--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Formação by Start</p>
+        <p>Desenvolvido por 3º Série Col. Est. do Campo de Alto São João</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
